Updated libraries and databases

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Eliteronix/gamify-your-life#readme",
   "dependencies": {
+    "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
     "sequelize": "^6.37.3",
     "sqlite3": "^5.1.7"
